--- a/DotMapper/DotMapper.Web.csproj
+++ b/DotMapper/DotMapper.Web.csproj
@@ -165,6 +165,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\Adapters\Repository.cs" />
+    <Compile Include="Adapters\Interfaces\IRepository.cs" />
     <Compile Include="App_Start\ApplicationDbContext.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
