added jasmin removed unsused angular scripts

--- a/DotMapper.DataModels/DotMapper.DataModels.csproj
+++ b/DotMapper.DataModels/DotMapper.DataModels.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Map.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
